chore: prefer toList()